[gd_scene load_steps=11 format=3 uid="uid://bd4c7244m3psm"]

[ext_resource type="Texture2D" uid="uid://dh2vxpap2om6e" path="res://graphics/ship.png" id="1_mg8yb"]
[ext_resource type="Script" path="res://scenes/ship.gd" id="1_o20hc"]
[ext_resource type="PackedScene" uid="uid://eljpftelkc3m" path="res://scenes/effects/explosion_particles.tscn" id="2_gff6t"]
[ext_resource type="PackedScene" uid="uid://lx8h3iqemofx" path="res://scenes/components/screen_wrap_component.tscn" id="3_8spoy"]
[ext_resource type="Material" uid="uid://dgwljbkx4lrpf" path="res://scenes/resources/white.tres" id="4_4qawm"]
[ext_resource type="Texture2D" uid="uid://bi8l8t8indem0" path="res://graphics/shield.png" id="5_5fq1k"]
[ext_resource type="PackedScene" uid="uid://diyp5kgms57hs" path="res://scenes/components/blinker_component.tscn" id="6_jc1x1"]

[sub_resource type="Animation" id="Animation_iah0l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pi44q"]
resource_name = "thrust"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7o6im"]
_data = {
"RESET": SubResource("Animation_iah0l"),
"thrust": SubResource("Animation_pi44q")
}

[node name="Ship" type="CharacterBody2D"]
collision_mask = 30
script = ExtResource("1_o20hc")
death_particle = ExtResource("2_gff6t")
whiten_material = ExtResource("4_4qawm")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -20, 14, 17, -14, 17)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("4_4qawm")
position = Vector2(0, 8)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_mg8yb")
hframes = 3

[node name="ShieldSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_5fq1k")

[node name="LaserSpawnPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -30)

[node name="ShootCooldown" type="Timer" parent="."]
unique_name_in_owner = true

[node name="WarpCooldown" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_7o6im")
}

[node name="ScreenWrapComponent" parent="." instance=ExtResource("3_8spoy")]

[node name="BlinkerComponent" parent="." instance=ExtResource("6_jc1x1")]

[connection signal="timeout" from="ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="WarpCooldown" to="." method="_on_warp_cooldown_timeout"]
